# real-time-rendering

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  project.4coder
source/: CMakeLists.txt  main.cc
source/assets/: cube.glb
source/realtime/: application.cc  application.h  buffer.cc  buffer.h  camera.cc  camera.h  device.cc  device.h  entity.cc  entity.h  event.cc  event.h  frame_info.h  gltf.cc  gltf.h  grid_system.cc  grid_system.h  input.cc  input.h  json.cc  json.h  mesh.cc  mesh.h  model.cc  model.h  pipeline.cc  pipeline.h  realtime.cc  realtime.h  render_system.cc  render_system.h  renderer.cc  renderer.h  swapchain.cc  swapchain.h  transform.cc  transform.h  utility.cc  utility.h  window.cc  (+1 more)
source/shaders/: simple.frag  simple.frag.spv  simple.vert  simple.vert.spv
